# JEngine

./: CMakeLists.txt  README.md
resources/shaders/: vertexShader.shader
src/: AABBCollider.cpp  AABBCollider.h  Callbacks.cpp  Callbacks.h  Component.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Globals.cpp  Globals.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h  main.cpp
